# db-mgr

./: Cargo.toml  LICENSE  config.yaml  nz.laspruca.DbMgr.yaml
extra/: nz.laspruca.DbMgr.desktop
src/: data.rs  docker.rs  main.rs
src/app/: add_container.rs  cantainer_card.rs  container_view.rs  mod.rs  subscription.rs
src/app/add_container/: mod.rs
